# aware

./: CMakeLists.txt
include/aware/android/: announce_socket.hpp  factory.hpp  io_service.hpp  monitor_socket.hpp  service.hpp
include/aware/android/detail/: aware_jni.hpp  client.hpp  monitor.hpp
src/android/: CMakeLists.txt  announce_socket.cpp  monitor_socket.cpp  service.cpp
src/android/detail/: aware_jni.cpp  client.cpp
src/android/java/dk/xpg/aware/: Aware.java  AwareAdapter.java  AwareContact.java
src/android/jni/: AwareAndroid.cpp
test/: CMakeLists.txt
test/android/: AwareTest.java  CMakeLists.txt  android_test.cpp
test/android/dk/xpg/aware/test/: AwareTest.java
